Add deterministic repack, ClickHouse benchmarks, and column-scaling tests
- Replace zip -qd + stripJavaArchivesHook (8hr fixup) with extract-filter-repack
  producing deterministic JARs directly (~3min build)
- Add ASM-based proxy class normalizer for reproducible bytecode
- Switch hashCode=3 → hashCode=2 (eliminates JVM counter non-determinism)
- Add NixOS VM test with full application-layer verification:
  health, API, DB migrations, driver loading, first-user setup,
  PostgreSQL + ClickHouse warehouse connections
- Add column-scaling benchmarks (1, 6, 20, 50, 100 cols x 20K rows)
  demonstrating ClickHouse JDBC serialization overhead
- Add per-driver OCI images, OCI verification tests
- Update readme with TODO: investigate 2K row limit and CH serialization

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>